tweak SM assessment at top end, fix SM avatar stretching, FAQ trim

--- a/scss/_Modal.scss
+++ b/scss/_Modal.scss
@@ -120,7 +120,10 @@ perspective effects (not including the modals and the overlay).
 
 	@media screen and (max-width: 700px) {
 		font-size: 1rem;
-		img {height: 100px; }
+		img {
+			max-height: 200px;
+			min-width: 66px;
+		}
 	}	
 }
 
